--- a/idc-servicio-auditoria-dev.properties
+++ b/idc-servicio-auditoria-dev.properties
@@ -14,3 +14,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
 
+feign.url=http://idc-servicio-zuul-server:8090/api
+
