--- a/idc-servicio-importacion-accept.properties
+++ b/idc-servicio-importacion-accept.properties
@@ -13,8 +13,22 @@ spring.servlet.multipart.max-file-size=10GB
 spring.servlet.multipart.max-request-size=10GB
 
 
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-RC
+#spring.datasource.url=jdbc:sqlserver://asnsqlbog20\\SQLEXPRESS;databaseName=Temp
+#spring.datasource.username=sa
+#spring.datasource.password=Sql2012R2
+
+spring.datasource.username=Administrador
+spring.datasource.password=Carvajal2020*
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+
+
 # files storage location (stores all files uploaded via REST API)
-storage.location=./uploads
+app.upload.dir= ./idcimportacion/IDC-Import/rc
+
 
 
 
