--- a/idc-servicio-importacion-qa.properties
+++ b/idc-servicio-importacion-qa.properties
@@ -11,15 +11,19 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.servlet.multipart.max-file-size=10GB
 spring.servlet.multipart.max-request-size=10GB
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-QA
+
+spring.datasource.username=Administrador
+spring.datasource.password=Carvajal2020*
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto=update
+
 
 
 # files storage location (stores all files uploaded via REST API)
-storage.location=./uploads
-
-
-
-
+app.upload.dir= ./idcimportacion/IDC-Import/qa
 
 logging.level.org.hibernate.SQL=debug
 
-feign.url=http://azure-docker-idc-dev5.eastus.cloudapp.azure.com:8090/api
+feign.url=http://idc-servicio-zuul-server:8090/api
