--- a/idc-servicio-auditoria-accept.properties
+++ b/idc-servicio-auditoria-accept.properties
@@ -14,3 +14,5 @@ spring.jpa.hibernate.ddl-auto=none
 
 logging.level.org.hibernate.SQL=debug
 
+feign.url=http://idc-servicio-zuul-server:8090/api
+
