--- a/idc-servicio-diagnostico-accept.properties
+++ b/idc-servicio-diagnostico-accept.properties
@@ -8,6 +8,16 @@ eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 spring.zipkin.base-url=http://zipkin-server-memory:9411/
 
 
+# conexion MySQL
+spring.datasource.url=jdbc:mysql://mysql8_idc_diagnostico:3306/db_idc_diagnostico?user=idc-diagnostico-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
+
+#spring.datasource.username=springboot
+#spring.datasource.password==Carvajal2019*
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
