--- a/idc-servicio-auditoria-dev.properties
+++ b/idc-servicio-auditoria-dev.properties
@@ -7,7 +7,7 @@ eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion MySQL
-spring.datasource.url=jdbc:mysql://mysql8_idc_auditoria:3306/db_idc_auditoria?user=idc-auditoria-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://mysql8_idc_auditoria_2:3306/db_idc_auditoria?user=idc-auditoria-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
