--- a/idc-servicio-auditoria-accept.properties
+++ b/idc-servicio-auditoria-accept.properties
@@ -14,5 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
 
+spring.jpa.properties.hibernate.jdbc.time_zone = UTC
+
 feign.url=http://idc-servicio-zuul-server:8090/api
 
