--- a/idc-servicio-inscripciones-dev.properties
+++ b/idc-servicio-inscripciones-dev.properties
@@ -13,7 +13,7 @@ spring.datasource.url=jdbc:postgresql://pgsql12_idc_inscripcion:5432/db_idc_insc
 
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.properties.hibernate.jdbc.time_zone = UTC
+#spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
 
 logging.level.org.hibernate.SQL=debug
