--- a/idc-servicio-usuarios-local.properties
+++ b/idc-servicio-usuarios-local.properties
@@ -14,3 +14,6 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 
 feign.url=http://idc-servicio-zuul-server:8090/api
+
+#Broker mensajeria
+idc.broker=rabbitmq
