--- a/idc-servicio-usuarios-local.properties
+++ b/idc-servicio-usuarios-local.properties
@@ -14,7 +14,8 @@ spring.jpa.hibernate.ddl-auto=update
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
 
-feign.url=http://idc-servicio-zuul-server:8090/api
+#feign.url=http://idc-servicio-zuul-server:8090/api
+feign.url=http://azure-docker-idc-msdev.eastus.cloudapp.azure.com:8090/api
 
 #Broker mensajeria
 idc.broker=rabbitmq
