--- a/idc-servicio-indata-dev.properties
+++ b/idc-servicio-indata-dev.properties
@@ -35,7 +35,7 @@ idc.rabbitmq.rangoformularioqueue=idc.rangoformulario_queue
 idc.rabbitmq.eliminardetalleremisionqueue=idc.eliminardetalleremision_queue
 
 #Conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://central-idc-sql-19.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-DEV
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-DEV
 spring.datasource.username=Administrador
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
