--- a/idc-servicio-reportes-dev.properties
+++ b/idc-servicio-reportes-dev.properties
@@ -7,7 +7,7 @@ eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # Conexión SQL Server
-spring.datasource.url=jdbc:sqlserver://central-idc-sql-19.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-DEV
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-DEV
 spring.datasource.username=Administrador
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -17,4 +17,4 @@ spring.jpa.hibernate.ddl-auto=update
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
 
-feign.url=http://azure-docker-idc-dev5.eastus.cloudapp.azure.com:8090/api
+feign.url=http://idc-servicio-zuul-server:8090/api
