--- a/idc-servicio-divipol-dev.properties
+++ b/idc-servicio-divipol-dev.properties
@@ -6,12 +6,12 @@ eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
-# conexion PostgresSQL
-spring.datasource.url=jdbc:postgresql://pgsql11_idc_divipol:5432/db_idc_divipol
-spring.datasource.username=idc-divipol-admin
-spring.datasource.password=Carvajal2019*
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.spatial.dialect.postgis.PostgisDialect
+# conexion SQL Server
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_divipol
+spring.datasource.username=Administrador
+spring.datasource.password=Carvajal2020*
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
