--- a/idc-servicio-parametros-dev.properties
+++ b/idc-servicio-parametros-dev.properties
@@ -13,4 +13,4 @@ spring.datasource.username=sa
 spring.datasource.password=Carvajal2020*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
