--- a/idc-servicio-auditoria-k8s-dev.properties
+++ b/idc-servicio-auditoria-k8s-dev.properties
@@ -1,4 +1,5 @@
-# idc-servicio-auditoria-k8s-dev.properties
+# idc-servicio-auditoria-dev.properties
+
 # url base del micro-servicio de eureka 
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 eureka.instance.preferIpAddress = true
@@ -7,7 +8,7 @@ eureka.instance.preferIpAddress = true
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion MySQL
-spring.datasource.url=jdbc:mysql://mysql8-idc-auditoria:3306/db_idc_auditoria?user=root&password=Carvajal2019*&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://mysql8_idc_auditoria:3306/db_idc_auditoria?user=root&password=Carvajal2019*&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
@@ -15,3 +16,6 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 
 feign.url=http://idc-servicio-zuul-server:8090/api
+
+#Broker mensajeria
+idc.broker=rabbitmq
