--- a/idc-servicio-parametros-k8s-dev.properties
+++ b/idc-servicio-parametros-k8s-dev.properties
@@ -7,13 +7,12 @@ eureka.instance.preferIpAddress = true
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://zipkin-server-memory:9411/
 
-# conexion MySQL
-spring.datasource.url=jdbc:mysql://mysql8-idc-parametros:3306/db_idc_parametros?user=root&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
-
-
+# conexion SQL Server
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_parametros
+spring.datasource.username=sa
+spring.datasource.password=Carvajal2020*
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
-
-logging.level.org.hibernate.SQL=debug
-
 
 
