--- a/idc-servicio-estaciones-k8s-dev.properties
+++ b/idc-servicio-estaciones-k8s-dev.properties
@@ -13,6 +13,6 @@ spring.datasource.username=sa
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 feign.url=http://idc-servicio-zuul-server:8090/api
