--- a/idc-servicio-rango-k8s-dev.properties
+++ b/idc-servicio-rango-k8s-dev.properties
@@ -9,7 +9,7 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 spring.datasource.url=jdbc:mysql://mysql8-idc-rango:3306/db_idc_rango?user=root&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 logging.level.org.hibernate.SQL=debug
 
