--- a/idc-servicio-usuarios-k8s-dev.properties
+++ b/idc-servicio-usuarios-k8s-dev.properties
@@ -18,7 +18,7 @@ feign.url=http://idc-servicio-zuul-server:8090/api
 
 #rabbitmq configuration
 #RabbitMQ
-spring.rabbitmq.host=azure-docker-idc-msdev.eastus.cloudapp.azure.com
+spring.rabbitmq.host=idc-rabbitmq38-alpine
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
