--- a/idc-servicio-estaciones-k8s-dev.properties
+++ b/idc-servicio-estaciones-k8s-dev.properties
@@ -8,11 +8,11 @@ eureka.instance.preferIpAddress = true
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://azure-docker-idc-msdev.eastus.cloudapp.azure.com:1434;databaseName=db_idc_estaciones
+spring.datasource.url=jdbc:sqlserver://sqlserver-idc-estaciones:1433;databaseName=db_idc_estaciones
 spring.datasource.username=sa
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 feign.url=http://idc-servicio-zuul-server:8090/api
