--- a/idc-servicio-divipol-k8s-dev.properties
+++ b/idc-servicio-divipol-k8s-dev.properties
@@ -12,7 +12,7 @@ spring.datasource.username=Administrador
 spring.datasource.password=Carvajal2020*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
