--- a/idc-servicio-inscripciones-k8s-dev.properties
+++ b/idc-servicio-inscripciones-k8s-dev.properties
@@ -8,12 +8,13 @@ eureka.instance.preferIpAddress = true
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://sqlserver-idc-inscripcion:1433;databaseName=db_idc_inscripciones
-spring.datasource.username=sa
-spring.datasource.password=Carvajal2019*
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_inscripciones
 
+spring.datasource.username=Administrador
+spring.datasource.password=Carvajal2020*
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
-
 #spring.jpa.properties.hibernate.jdbc.time_zone = UTC
 
 
