--- a/idc-servicio-cierre-k8s-dev.properties
+++ b/idc-servicio-cierre-k8s-dev.properties
@@ -8,23 +8,24 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 
 # conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://sqlserver-idc-estaciones:1433;databaseName=db_idc_estaciones
-spring.datasource.username=sa
-spring.datasource.password=Carvajal2019*
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_estaciones
+
+spring.datasource.username=Administrador
+spring.datasource.password=Carvajal2020*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
-hibernate.hbm2ddl.auto=update
 
 
 logging.level.org.hibernate.SQL=debug
 
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_configcierres
 
-spring.second-datasource.url = jdbc:sqlserver://sqlserver-idc-estaciones:1433;databaseName=db_idc_configcierres
-spring.second-datasource.username = sa
-spring.second-datasource.password = Carvajal2019*
-spring.second-datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-
+spring.datasource.username=Administrador
+spring.datasource.password=Carvajal2020*
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto=update
 
 
 logging.level.org.hibernate.SQL=debug
