--- a/idc-servicio-indata-k8s-dev.properties
+++ b/idc-servicio-indata-k8s-dev.properties
@@ -11,7 +11,7 @@ spring.sleuth.sampler.probability=1.0
 logging.level.org.hibernate.SQL=debug
 
 #RabbitMQ
-spring.rabbitmq.host=azure-docker-idc-msdev.eastus.cloudapp.azure.com
+spring.rabbitmq.host=idc-rabbitmq38-alpine
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
