--- a/idc-servicio-responsables-k8s-dev.properties
+++ b/idc-servicio-responsables-k8s-dev.properties
@@ -4,7 +4,8 @@ eureka.instance.preferIpAddress = true
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 # conexion Postgres
-spring.datasource.url=jdbc:postgresql://pgsql12-idc-responsables:5432/db_idc_responsables
+#spring.datasource.url=jdbc:postgresql://pgsql12-idc-responsables:5432/db_idc_responsables
+spring.datasource.url=jdbc:postgresql://azure-docker-idc-msdev.eastus.cloudapp.azure.com:5442/db_idc_responsables
 spring.datasource.username=postgres
 spring.datasource.password=Carvajal2019*
 
