--- a/idc-servicio-usuarios-k8s-dev.properties
+++ b/idc-servicio-usuarios-k8s-dev.properties
@@ -9,7 +9,7 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion MySQL
 # spring.datasource.url=jdbc:mysql://mysql8-idc-usuarios:3306/db_idc_usuarios?user=root&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.url=jdbc:mysql://azure-docker-idc-msdev.eastus.cloudapp.azure.com:3306/db_idc_usuarios?user=idc-usuarios-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://idc-mysql-postgres.eastus2.cloudapp.azure.com:3306/db_idc_usuarios?user=idc-usuarios-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
 spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
