--- a/idc-servicio-formularios-k8s-dev.properties
+++ b/idc-servicio-formularios-k8s-dev.properties
@@ -8,7 +8,7 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion PostgresSQL
 #spring.datasource.url=jdbc:postgresql://pgsql-idc-formularios:5432/db_idc_formularios
-spring.datasource.url=jdbc:postgresql://azure-docker-idc-msdev.eastus.cloudapp.azure.com:5439/db_idc_formularios
+spring.datasource.url=jdbc:postgresql://idc-mysql-postgres.eastus2.cloudapp.azure.com:5432/db_idc_formularios
 spring.datasource.username=postgres
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=org.postgresql.Driver
