--- a/idc-servicio-solicitud-k8s-dev.properties
+++ b/idc-servicio-solicitud-k8s-dev.properties
@@ -8,12 +8,12 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion PostgresSQL
 #spring.datasource.url=jdbc:postgresql://pgsql-idc-solicitud:5432/db_idc_solicitud
-spring.datasource.url=jdbc:postgresql://azure-docker-idc-msdev.eastus.cloudapp.azure.com:5438/db_idc_solicitud
+spring.datasource.url=jdbc:postgresql://idc-mysql-postgres.eastus2.cloudapp.azure.com:5432/db_idc_solicitud
 spring.datasource.username=postgres
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
