--- a/idc-servicio-notificaciones-k8s-dev.properties
+++ b/idc-servicio-notificaciones-k8s-dev.properties
@@ -14,7 +14,7 @@ spring.datasource.username=postgres
 spring.datasource.password=Carvajal2019*
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
