--- a/idc-servicio-diagnostico-k8s-dev.properties
+++ b/idc-servicio-diagnostico-k8s-dev.properties
@@ -8,7 +8,7 @@ spring.zipkin.base-url=http://zipkin-server-memory:9411/
 
 # conexion MySQL
 # spring.datasource.url=jdbc:mysql://mysql8-idc-diagnostico:3306/db_idc_diagnostico?user=root&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.url=jdbc:mysql://azure-docker-idc-msdev.eastus.cloudapp.azure.com:3310/db_idc_diagnostico?user=root&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://idc-mysql-postgres.eastus2.cloudapp.azure.com:3306/db_idc_diagnostico?user=root&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
 
 #spring.datasource.username=springboot
 #spring.datasource.password==Carvajal2019*
