--- a/idc-servicio-rango-k8s-dev.properties
+++ b/idc-servicio-rango-k8s-dev.properties
@@ -7,7 +7,7 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion MySQL
 #spring.datasource.url=jdbc:mysql://mysql8-idc-rango:3306/db_idc_rango?user=root&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.url=jdbc:mysql://azure-docker-idc-msdev.eastus.cloudapp.azure.com:3312/db_idc_rango?user=idc-rango-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://idc-mysql-postgres.eastus2.cloudapp.azure.com:3306/db_idc_rango?user=idc-rango-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
