--- a/idc-servicio-responsables-k8s-dev.properties
+++ b/idc-servicio-responsables-k8s-dev.properties
@@ -5,7 +5,7 @@ eureka.instance.preferIpAddress = true
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 # conexion Postgres
 #spring.datasource.url=jdbc:postgresql://pgsql12-idc-responsables:5432/db_idc_responsables
-spring.datasource.url=jdbc:postgresql://azure-docker-idc-msdev.eastus.cloudapp.azure.com:5442/db_idc_responsables
+spring.datasource.url=jdbc:postgresql://idc-mysql-postgres.eastus2.cloudapp.azure.com:5432/db_idc_responsables
 spring.datasource.username=postgres
 spring.datasource.password=Carvajal2019*
 
