--- a/idc-servicio-auditoria-k8s-dev.properties
+++ b/idc-servicio-auditoria-k8s-dev.properties
@@ -16,7 +16,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
 
-feign.url=http://idc-servicio-zuul-server:8090/api
+#feign.url=http://idc-servicio-zuul-server:8090/api
+feign.url=http://idck8master.eastus.cloudapp.azure.com:30006/api
 
 #Broker mensajeria
 idc.broker=rabbitmq
