--- a/idc-servicio-responsables-k8s-dev.properties
+++ b/idc-servicio-responsables-k8s-dev.properties
@@ -15,4 +15,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
 
-feign.url=http://idc-servicio-zuul-server:8090/api
+#feign.url=http://idc-servicio-zuul-server:8090/api
+feign.url=http://idck8master.eastus.cloudapp.azure.com:30006/api
