--- a/idc-servicio-solicitud-k8s-dev.properties
+++ b/idc-servicio-solicitud-k8s-dev.properties
@@ -17,3 +17,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 # logging hibbernate level
 logging.level.org.hibernate.SQL=debug
+
+feign.url=http://idck8master.eastus.cloudapp.azure.com:30006/api
