--- a/idc-servicio-estaciones-dev.properties
+++ b/idc-servicio-estaciones-dev.properties
@@ -6,12 +6,15 @@ eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
+
 # conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://azure-docker-idc-msdev.eastus.cloudapp.azure.com:1434;databaseName=db_idc_estaciones
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_estaciones
 spring.datasource.username=sa
-spring.datasource.password=Carvajal2019*
+spring.datasource.password=Carvajal2020*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
+hibernate.hbm2ddl.auto=update
+
 
 feign.url=http://idc-servicio-zuul-server:8090/api
